--- a/src/styles/layout/base.scss
+++ b/src/styles/layout/base.scss
@@ -11,6 +11,8 @@ body {
   font-weight: 400;
   font-size: 15px;
   line-height: 1.6;
+  background-color: $blue;
+  color: #fff;
 }
 
 .wrapper {
@@ -22,12 +24,22 @@ body {
 
 .wrapper__content {
   flex-grow: 1;
+  display: flex;
+  flex-direction: column;
 }
 
-.container {
+.wrap {
+  display:  flex;
+  flex-grow: 1;
+  min-height: 100%;
+  align-items: stretch;
+}
+
+.cont {
   margin: 0 auto;
-  max-width: 1200px;
-  width: 93.75%;
+  min-height: 100%;
+  max-width: 1600px;
+  width: 95%;
 }
 
 *, ::before, ::after {
@@ -71,4 +83,8 @@ table {
 
 svg {
   display: block;
+}
+
+.hidden {
+  display: none;
 }
