feat: added level filter with new data

--- a/src/styles/layout/base.scss
+++ b/src/styles/layout/base.scss
@@ -11,8 +11,8 @@ body {
   font-weight: 400;
   font-size: 15px;
   line-height: 1.6;
-  background-color: $blue;
-  color: #fff;
+  background-color: $gray;
+  color: #414042;
 }
 
 .wrapper {
