--- a/src/styles/abstract/variables.scss
+++ b/src/styles/abstract/variables.scss
@@ -1,13 +1,15 @@
 //colors
 $blue: #043A6B;
+$gray: #F8F9FA;
 
 // fillter
 $background: #e8e8e8;
 $select-color: #414042;
 $mid-gray: #d7dde4;
 $select-background: #ffffff;
-$select-width: 320px;
+$select-width: 280px;
 $select-height: 60px;
 $done-option-color: #008000;
 $inwork-option-color: #ff0; 
 $received-option-color: #ff0000; 
+$shadow-filter: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 0 0 rgba(0, 0, 0, 0.19);
