--- a/src/styles/blocks/table.scss
+++ b/src/styles/blocks/table.scss
@@ -1,5 +1,7 @@
 .table__header {
   color: var(--gray-dark);
+  font-size: 16px;
+  padding: 10px 0;
 }
 
 .table__row {
@@ -17,6 +19,11 @@
   user-select: none;
   max-width: 300px;
   vertical-align: middle;
+  text-align: center;
+}
+
+.table__header .table__header-cell {
+  padding: 20px 0;
 }
 
 .table__row-thumb {
