--- a/src/styles/abstract/variables.scss
+++ b/src/styles/abstract/variables.scss
@@ -13,3 +13,5 @@ $done-option-color: #008000;
 $inwork-option-color: #ff0; 
 $received-option-color: #ff0000; 
 $shadow-filter: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 0 0 rgba(0, 0, 0, 0.19);
+$shadow-filter-active: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 0 0 #03A9F4;;
+$datepickerWidth: 280px;
