--- a/src/styles/blocks/filter.scss
+++ b/src/styles/blocks/filter.scss
@@ -98,14 +98,21 @@
     }
   }
 
-  &__level-select,
-  &__type-select {
+  &__level-wrap,
+  &__type-wrap,
+  &__date-wrap {
     box-shadow: $shadow-filter;
     margin-top: 30px;
     background-color: $select-background;
   }
 
-  &__level-select {
+  &__level-wrap.activeFilter,
+  &__type-wrap.activeFilter,
+  &__date-wrap.activeFilter {
+    box-shadow: $shadow-filter-active;
+  }
+
+  &__level-wrap {
     .select-options {
       li {
         .filter-circle_2 {
@@ -121,5 +128,26 @@
         }
       }
     }
+  }
+
+  &__date-wrap {
+
+    input {
+      &:focus {
+        outline: none;
+      }
+
+      cursor: pointer;
+
+      &::placeholder {
+        color: $select-color;
+      }
+
+      padding: 20px 20px;
+      width: $select-width;
+      height: $select-height;
+      border: none;
+    }
+
   }
 }
