--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,5 @@
 @import 'normalize.css';
+@import '../../node_modules/air-datepicker/src/sass/*.scss';
 
 @import './layout/bootstrap_minty.css';
 @import './abstract/*.scss';
