--- a/src/styles/blocks/page-title.scss
+++ b/src/styles/blocks/page-title.scss
@@ -1,4 +1,6 @@
-.page__title {
+.page-title {
   font-size: 2em;
-  color: white;
+  font-weight: 700;
+  color: var(--gray-dark);
+  text-shadow: 0px 1px 1px var(--dark);
 }
