feat: implement toggle functionality

--- a/src/styles/blocks/table.scss
+++ b/src/styles/blocks/table.scss
@@ -20,6 +20,7 @@
   max-width: 250px;
   vertical-align: middle;
   text-align: center;
+  overflow: hidden;
 }
 
 .table__header .table__header-cell {
