feat: scss clean up

--- a/src/styles/abstract/variables.scss
+++ b/src/styles/abstract/variables.scss
@@ -2,16 +2,5 @@
 $blue: #043A6B;
 $gray: #F8F9FA;
 
-// fillter
-$background: #e8e8e8;
-$select-color: #414042;
-$mid-gray: #d7dde4;
-$select-background: #ffffff;
-$select-width: 280px;
-$select-height: 60px;
-$done-option-color: #008000;
-$inwork-option-color: #ff0; 
-$received-option-color: #ff0000; 
-$shadow-filter: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 0 0 rgba(0, 0, 0, 0.19);
-$shadow-filter-active: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 0 0 #03A9F4;;
-$datepickerWidth: 280px;
+// sidebar
+$width: 320px;
