--- a/src/styles/components/footer.scss
+++ b/src/styles/components/footer.scss
@@ -1,9 +1,13 @@
 .footer {
-  padding: 20px 0;
+  height: var(--footer-height);
+  padding: 10px 0;
   background-color: var(--gray-dark);
   color: var(--light);
   z-index: 99;
-  position: relative;
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 
 .footer__cont {
@@ -20,6 +24,7 @@
 
 .footer__copy-item {
   margin-right: 50px;
+  margin-bottom: 4px;
 
   &:nth-of-type(2n) {
     margin-right: 0;
