--- a/src/styles/components/sidebar.scss
+++ b/src/styles/components/sidebar.scss
@@ -22,6 +22,7 @@
   align-items: center;
   padding: 0 5px;
   padding-top: 30px;
+  padding-bottom: calc(var(--footer-height) + 20px);
   transition: 0.5s;
   position: fixed;
   background-color: $gray;
