--- a/src/styles/components/table-wrapper.scss
+++ b/src/styles/components/table-wrapper.scss
@@ -5,6 +5,8 @@
   background-color: var(--white);
   margin-left: 320px;
   transition: 0.5s;
+  height: calc(100vh - var(--footer-height));
+  overflow: auto;
 }
 
 .table-wrapper.expanded {
