add: connected the telegram bot to the front

--- a/src/styles/components/map.scss
+++ b/src/styles/components/map.scss
@@ -3,3 +3,13 @@
   height: 100vh;
   flex-shrink: 0;
 }
+.hint {
+  text-align: center;
+  font-weight: 900;
+  
+}
+.balloon {
+  width: 350px;
+  text-align: center;
+  font-weight: 900;
+}
