--- a/src/styles/components/popup.scss
+++ b/src/styles/components/popup.scss
@@ -1,4 +1,5 @@
 .popup {
+  animation: appear 350ms ease-in 1;
   position: fixed;
   top: 50%;
   left: 50%;
@@ -23,4 +24,20 @@
 .popup__photo {
   flex-shrink: 0;
   width: 40vw;
+}
+
+@keyframes appear {
+  0%{
+    opacity: 0;
+    margin-top: 20px;
+  }
+
+  50%{
+    opacity: 0.3;
+  }
+
+  100%{
+    opacity: 1;
+    margin-top: 0;
+  }
 }
