--- a/src/styles/components/toggle.scss
+++ b/src/styles/components/toggle.scss
@@ -43,7 +43,7 @@
     border-radius: 50%;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
     margin-left: 2px;
-    transition: margin 0.4s;
+    animation: moveLeft 400ms ease-out 1;
   }
 }
 
@@ -53,4 +53,25 @@
 
 .toggle__input:checked + .toggle__label::after {
   margin-left: 71px;
+  animation: moveRight 400ms ease-out 1;
+}
+
+@keyframes moveRight {
+  0%{
+    margin-left: 2px;
+  }
+
+  80%{
+    margin-left: 65px;
+  }
+}
+
+@keyframes moveLeft {
+  0%{
+    margin-left: 71px;
+  }
+
+  80%{
+    margin-left: 10px;
+  }
 }
