feat: footer redesign and new placemark

--- a/src/styles/abstract/variables.scss
+++ b/src/styles/abstract/variables.scss
@@ -1,11 +1,12 @@
 //colors
 $blue: #043A6B;
 $gray: #F8F9FA;
+$rsYellow: #faea68;
 
 // sidebar
 $width: 320px;
 
 //footer
 :root {
-  --footer-height: 80px;
+  --footer-height: 50px;
 }
