--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,7 +3,5 @@
 
 @import './layout/bootstrap_minty.css';
 @import './abstract/*.scss';
-@import './layout/base.scss';
-@import './layout/media.scss';
-
 @import './components/*.scss';
+@import './layout/*.scss';
