--- a/src/styles/layout/base.scss
+++ b/src/styles/layout/base.scss
@@ -17,7 +17,7 @@ body {
   font-weight: 400;
   font-size: 15px;
   line-height: 1.6;
-  background-color: $gray;
+  background-color: var(--light);
   color: #414042;
 }
 
