--- a/src/styles/components/sidebar.scss
+++ b/src/styles/components/sidebar.scss
@@ -1,7 +1,7 @@
 .sidebar_show-button {
   position: absolute;
   top: 39px;
-  background: $gray;
+  background: var(--light);
   z-index: 1;
   width: 22px;
   height: 22px;
@@ -16,7 +16,7 @@
 }
 
 .sidebar {
-  width: $width;
+  width: var(--sidebar-width);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -25,7 +25,7 @@
   padding-bottom: calc(var(--footer-height) + 20px);
   transition: 0.5s;
   position: fixed;
-  background-color: $gray;
+  background-color: var(--light);
   left: 0;
   top: 0;
   z-index: 5;
@@ -43,7 +43,7 @@
     position: absolute;
     right: 30px;
     top: 39px;
-    background: $gray;
+    background: var(--light);
     z-index: 1;
     width: 22px;
     height: 22px;
